--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2442,9 +2442,11 @@
 // Obvius specific styling
 // full width and 2/3 columns
 
+.one-one-two-column .column3,
 .one-two-column .column2,
 .single-column .column1,
-.two-one-column .column1 {
+.two-one-column .column1,
+.two-one-one-column .column1 {
   .size4 {
     .text {
       display: block;
@@ -2731,6 +2733,7 @@
 
 .double-column [class*=column],
 .one-two-column .column1,
+.quad-column [class*=column],
 .triple-column [class*=column],
 .two-one-column .column2 {
   .size2,
@@ -3038,6 +3041,19 @@
   }
 }
 @media only screen and (min-width: 870px) {
+  // Front page/ no left menu
+  .one-one-two-column .column3,
+  .two-one-one-column .column1 {
+    .size2 {
+      &.with-img {
+        .box2 img {
+          max-width: none!important;
+          max-height: none!important;
+          width: 100%!important;
+        }
+      }
+    }
+  }
   // Display text for full width .size1 boxes
   .single-column .column1 {
     .size1 {
@@ -3109,9 +3125,16 @@
     }
   }
   // Header styling for single column boxes
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .one-three-column .column1,
   .one-two-column .column1,
+  .quad-column [class*=column],
+  .three-one-column .column2,
   .triple-column [class*=column],
-  .two-one-column .column2 {
+  .two-one-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
     .size1 {
       &.with-img {
         .box2 {
@@ -3143,9 +3166,11 @@
     }
   }
   // Flexbox fix for outlined with image (full width and 2/3 columns)
+  .one-one-two-column .column3,
   .one-two-column .column2,
   .single-column .column1,
-  .two-one-column .column1 {
+  .two-one-column .column1,
+  .two-one-one-column .column1 {
     .size2,
     .size3 {
       &.outlined,
@@ -3153,18 +3178,12 @@
         .box1 {
           flex: 1;
         }
-      }
 
-      &.with-img {
-        &.text-down {
-          &:hover {
-            .header {
-              background: transparent!important;
-            }
-          }
-
-          &.subcolor_5 {
-            background: @ku-gray;
+        .box2 {
+          img {
+            max-height: 100%!important;
+            max-width: none!important;
+            width: auto!important;
           }
         }
       }
@@ -3264,6 +3283,7 @@
 @media only screen and (min-width: 870px) and (max-width: 1024px) {
   // All single culumns
   .one-two-column .column1,
+  .quad-column [class*=column],
   .triple-column [class*=column],
   .two-one-column .column2 {
     .size1 {
@@ -3342,6 +3362,37 @@
     }
   }
 }
+@media only screen and (min-width: 681px) and (max-width: 869px) {
+  // Front page / no menu
+  // 1/3 and 3/1 columns
+  .one-three-column .column1,
+  .three-one-column .column2 {
+    .size1 {
+      &.with-img {
+        flex-direction: row;
+
+        .box1 {
+          flex: 1;
+          order: 2;
+
+          .text {
+            display: block;
+          }
+        }
+
+        .box2 {
+          flex: 0 1 235px!important;
+          order: 1;
+
+          img {
+            max-width: none!important;
+            max-height: 108%!important;
+          }
+        }
+      }
+    }
+  }
+}
 @media only screen and (min-width: 600px) and (max-width: 680px) {
   &.size1 {
     &.with-img {
@@ -3353,7 +3404,7 @@
     }
   }
 }
-@media only screen and (min-width: 460px) and (max-width: 870px) {
+@media only screen and (min-width: 460px) and (max-width: 869px) {
   &.size1 {
     .box2 {
       flex: 0 1 185px!important;
@@ -3364,6 +3415,7 @@
       }
     }
   }
+  //
   // All single, 2/3 and double comlumn boxes with image
   .double-column [class*=column],
   .one-two-column .column1,
@@ -3874,6 +3926,53 @@
       }
     }
   }
+  // Behave as single columns
+  .quad-column [class*=column] {
+    &.size2,
+    &.size3 {
+      &.with-img {
+        flex-direction: column;
+
+        &.text-over {
+          &.text-down {
+            .box1 {
+              position: absolute;
+              left: 0;
+              bottom: 0;
+            }
+          }
+
+          &.text-top {
+            .box1 {
+              position: absolute;
+              left: 0;
+              top: 0;
+            }
+          }
+        }
+
+        .box1 {
+          order: 2;
+          flex: 0 1 auto;
+          width: 100%;
+          //   .header {
+          //     width: 100%;
+          //     border-right: 25px solid transparent;
+          //     white-space: nowrap;
+          //     overflow: hidden;
+          //     padding: 8px 0 6px 10px;
+          //   }
+          //   .text {
+          //     display: none;
+          //   }
+        }
+
+        .box2 {
+          order: 1;
+        }
+      }
+    }
+  }
   // Hover styling for full width and 2/3 columns
   .one-two-column .column2,
   .single-column .column1,
@@ -3891,6 +3990,30 @@
               background: transparent!important;
               padding: 8px 5px 6px 10px;
             }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and (min-width: 460px) {
+  .one-one-two-column .column3,
+  .one-two-column .column2,
+  .single-column .column1,
+  .two-one-column .column1,
+  .two-one-one-column .column1 {
+    .size2,
+    .size3 {
+      &.with-img {
+        &.text-down {
+          &:hover {
+            .header {
+              background: transparent!important;
+            }
+          }
+
+          &.subcolor_5 {
+            background: @ku-gray;
           }
         }
       }
