--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -61,9 +61,10 @@
 @import "ku-mobile-menu.less";
 @import "ku-footer.less";
 @import "ku-news.less";
+@import "ku-jumpboard.less";
 @import "ku-bxslider.less";
 @import "ku-datatables.less";
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
-@import "ku-gridboxes.less";
+//@import "ku-gridboxes.less";
