--- a/less/variables.less
+++ b/less/variables.less
@@ -24,6 +24,8 @@
 
 @ku-red:                #901a1e;
 @ku-red-hover:          #7b161a;
+@ku-jumpboard:          #921819;
+@ku-jumpboard-links:    #606060;
 @hum:                   #365aa5;
 @hum-hover:             #304f91;
 @science:               #46743c;
