--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2214,20 +2214,20 @@
 
   &:not(.with-img) {
     .box1 {
-      flex: 0 1 100%;
+      flex: 1 1 auto;
     }
 
     .box2 {
       display: none;
     }
   }
-
   // Videos
   &.with-iframe {
-      background-color: @ku-gray;
-      &::before {
-          display: none;
-      }
+    background-color: @ku-gray;
+
+    &::before {
+      display: none;
+    }
   }
   // Boxes with the title at the top
   &.text-top {
@@ -3292,12 +3292,12 @@
   // All single culumns
   .one-one-two-column .column1,
   .one-one-two-column .column2,
-  .two-one-one-column .column2,
-  .two-one-one-column .column3,
   .one-two-column .column1,
   .quad-column [class*=column],
   .triple-column [class*=column],
-  .two-one-column .column2 {
+  .two-one-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
     .size1 {
       .box1 {
         .header {
@@ -3374,9 +3374,20 @@
     }
   }
 }
+@media only screen and (max-width: 869px) {
+    // Dynamic height for boxes without images
+    &:not(.with-img) {
+        &.outlined, &.full {
+            height: auto!important;
+            .text {
+                padding-bottom: 10px;
+            }
+        }
+    }
+}
 @media only screen and (min-width: 681px) and (max-width: 869px) {
   // Front page / no menu
-  // 1/3 and 3/1 columns
+  // 1/3 columns
   .one-three-column .column1,
   .three-one-column .column2 {
     .size1 {
@@ -3393,13 +3404,27 @@
         }
 
         .box2 {
-          flex: 0 1 235px!important;
+          flex: 0 1 49%!important;
           order: 1;
 
           img {
             max-width: none!important;
             max-height: 108%!important;
           }
+        }
+      }
+    }
+  }
+  // Front page/ no left menu
+  // one-one-two columns
+  .one-one-two-column .column3,
+  .two-one-one-column .column1 {
+    .size2,
+    .size3 {
+      // Videos
+      &.with-iframe {
+        .box2 {
+          flex: 0 1 49%;
         }
       }
     }
@@ -3967,16 +3992,6 @@
           order: 2;
           flex: 0 1 auto;
           width: 100%;
-          //   .header {
-          //     width: 100%;
-          //     border-right: 25px solid transparent;
-          //     white-space: nowrap;
-          //     overflow: hidden;
-          //     padding: 8px 0 6px 10px;
-          //   }
-          //   .text {
-          //     display: none;
-          //   }
         }
 
         .box2 {
@@ -4009,52 +4024,58 @@
   }
 }
 @media only screen and (min-width: 460px) and (max-width:680px) {
-    // Front page grid single columns
-    .one-one-two-column .column1,
-    .one-one-two-column .column2,
-    .two-one-one-column .column2,
-    .two-one-one-column .column3,
-    .quad-column [class*=column] {
-      .size2 {
-        &.with-img {
-          .box2 img {
-            max-width: none!important;
-            max-height: 155%!important;
-            transform: translateY(-50%) translateX(-50%) scale(1.2);
-          }
-        }
-      }
-      .size3 {
-        &.with-img {
-          .box2 img {
-              width: 100%;
-              max-width: none!important;
-              max-height: none!important;
-          }
+  // Front page grid single columns
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .quad-column [class*=column],
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
+    .size2 {
+      &.with-img {
+        .box2 img {
+          max-width: none!important;
+          max-height: 155%!important;
+          transform: translateY(-50%) translateX(-50%) scale(1.2);
         }
       }
     }
+
+    .size3 {
+      &.with-img {
+        .box2 img {
+          width: 100%;
+          max-width: none!important;
+          max-height: none!important;
+        }
+      }
+    }
+  }
 }
 @media only screen and (min-width: 460px) {
-    // Front page/ no left menu
-    .one-one-two-column .column3,
-    .two-one-one-column .column1 {
-      .size2, .size3 {
-        // Videos
-        &.with-iframe {
-            background-color: @ku-gray;
-            &::before {
-                display: none;
-            }
-            .box1 {
-                order: 2;
-            }
-            .box2 {
-                order: 1;
-            }
+  // Front page/ no left menu
+  .one-one-two-column .column3,
+  .two-one-one-column .column1 {
+    .size2,
+    .size3 {
+      // Videos
+      &.with-iframe {
+        background-color: @ku-gray;
+
+        &::before {
+          display: none;
+        }
+
+        .box1 {
+          order: 2;
+        }
+
+        .box2 {
+          order: 1;
         }
       }
     }
+  }
+
   .one-one-two-column .column3,
   .one-two-column .column2,
   .single-column .column1,
@@ -4087,6 +4108,7 @@
       }
     }
   }
+
   // All column types must behave like single column boxes
   .gcrow .gccolumn .gridbox {
     &.size1 {
@@ -4437,9 +4459,9 @@
     }
 
     &.size2 {
-      height: 220px;
 
       &.with-img {
+          height: 220px;
         .box2 {
           img {
             max-width: 171%!important;
@@ -4450,9 +4472,9 @@
     }
 
     &.size3 {
-      height: 170px;
 
       &.with-img {
+          height: 170px;
         .box2 {
           img {
             max-width: 136%!important;
@@ -4467,5 +4489,6 @@
         display: none;
       }
     }
+
   }
 }
