--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -811,11 +811,15 @@
     <p class="help-block" id="help-block-@grid-gutter-width">Padding between columns. Gets divided in half for the left and right.</p>
   </div>
   <div class="col-xs-4">
+    <label for="input-@grid-gutter-height">@grid-gutter-height</label>
+    <input class="form-control" id="input-@grid-gutter-height" type="text" value="23px" data-var="@grid-gutter-height"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
     <label for="input-@grid-float-breakpoint">@grid-float-breakpoint</label>
     <input class="form-control" id="input-@grid-float-breakpoint" type="text" aria-describedby="help-block-@grid-float-breakpoint" value="@screen-sm-min" data-var="@grid-float-breakpoint"/>
     <p class="help-block" id="help-block-@grid-float-breakpoint">Point at which the navbar becomes uncollapsed.</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@grid-float-breakpoint-max">@grid-float-breakpoint-max</label>
     <input class="form-control" id="input-@grid-float-breakpoint-max" type="text" aria-describedby="help-block-@grid-float-breakpoint-max" value="(@grid-float-breakpoint - 1)" data-var="@grid-float-breakpoint-max"/>
@@ -1683,7 +1687,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@panel-heading-padding">@panel-heading-padding</label>
-    <input class="form-control" id="input-@panel-heading-padding" type="text" value="8px 10px" data-var="@panel-heading-padding"/>
+    <input class="form-control" id="input-@panel-heading-padding" type="text" value="6px 10px" data-var="@panel-heading-padding"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
