--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -6,32 +6,77 @@
     .ku-navbar-header {
       font-weight: bold;
       margin-bottom: @grid-gutter-width;
+      padding-left: 6px;
       border-left: 8px solid @ku-red;
+
+      a {
+        color: inherit;
+
+        &:hover {
+          text-decoration: none;
+          color: @ku-red;
+        }
+      }
 
       .theme-samf & {
         border-left: 8px solid @samf;
+
+        a {
+          &:hover {
+            color: @samf;
+          }
+        }
       }
 
       .theme-hum & {
         border-left: 8px solid @hum;
+
+        a {
+          &:hover {
+            color: @hum;
+          }
+        }
       }
 
       .theme-science & {
         border-left: 8px solid @science;
+
+        a {
+          &:hover {
+            color: @science;
+          }
+        }
       }
 
       .theme-sund & {
         border-left: 8px solid @sund;
+
+        a {
+          &:hover {
+            color: @sund;
+          }
+        }
       }
 
       .theme-jura & {
         border-left: 8px solid @jura;
+
+        a {
+          &:hover {
+            color: @jura;
+          }
+        }
       }
 
       .theme-teol & {
         border-left: 8px solid @teol;
+
+        a {
+          &:hover {
+            color: @teol;
+          }
+        }
       }
-      padding-left: 6px;
     }
     // All levels
     ul {
