--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -67,4 +67,4 @@
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
-//@import "ku-gridboxes.less";
+@import "ku-gridboxes.less";
