--- a/less/variables.less
+++ b/less/variables.less
@@ -377,6 +377,8 @@
 @grid-columns:              12;
 //** Padding between columns. Gets divided in half for the left and right.
 @grid-gutter-width:         26px;
+// KU specific:
+@grid-gutter-height:         23px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-sm-min;
@@ -770,7 +772,7 @@
 
 @panel-bg:                    #fff;
 @panel-body-padding:          10px;
-@panel-heading-padding:       8px 10px;
+@panel-heading-padding:       6px 10px;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
