--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -64,10 +64,14 @@
     <input class="form-control" id="input-@ku-jumpboard-links" type="text" value="#606060" data-var="@ku-jumpboard-links"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@ku-jumpboard-list-bg">@ku-jumpboard-list-bg</label>
+    <input class="form-control" id="input-@ku-jumpboard-list-bg" type="text" value="#f1f1f1" data-var="@ku-jumpboard-list-bg"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
     <label for="input-@hum">@hum</label>
     <input class="form-control" id="input-@hum" type="text" value="#365aa5" data-var="@hum"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@hum-hover">@hum-hover</label>
     <input class="form-control" id="input-@hum-hover" type="text" value="#304f91" data-var="@hum-hover"/>
@@ -76,11 +80,11 @@
     <label for="input-@science">@science</label>
     <input class="form-control" id="input-@science" type="text" value="#46743c" data-var="@science"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@science-hover">@science-hover</label>
     <input class="form-control" id="input-@science-hover" type="text" value="#395e31" data-var="@science-hover"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sund">@sund</label>
     <input class="form-control" id="input-@sund" type="text" value="#2a216a" data-var="@sund"/>
@@ -89,11 +93,11 @@
     <label for="input-@sund-hover">@sund-hover</label>
     <input class="form-control" id="input-@sund-hover" type="text" value="#1b1545" data-var="@sund-hover"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@samf">@samf</label>
     <input class="form-control" id="input-@samf" type="text" value="#e13718" data-var="@samf"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@samf-hover">@samf-hover</label>
     <input class="form-control" id="input-@samf-hover" type="text" value="#cc3216" data-var="@samf-hover"/>
@@ -102,11 +106,11 @@
     <label for="input-@jura">@jura</label>
     <input class="form-control" id="input-@jura" type="text" value="#999632" data-var="@jura"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@jura-hover">@jura-hover</label>
     <input class="form-control" id="input-@jura-hover" type="text" value="#85822c" data-var="@jura-hover"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@teol">@teol</label>
     <input class="form-control" id="input-@teol" type="text" value="#66609e" data-var="@teol"/>
@@ -115,11 +119,11 @@
     <label for="input-@teol-hover">@teol-hover</label>
     <input class="form-control" id="input-@teol-hover" type="text" value="#565185" data-var="@teol-hover"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-primary">@brand-primary</label>
     <input class="form-control" id="input-@brand-primary" type="text" value="darken(#428bca, 6.5%)" data-var="@brand-primary"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-success">@brand-success</label>
     <input class="form-control" id="input-@brand-success" type="text" value="#5cb85c" data-var="@brand-success"/>
@@ -128,11 +132,11 @@
     <label for="input-@brand-info">@brand-info</label>
     <input class="form-control" id="input-@brand-info" type="text" value="#5bc0de" data-var="@brand-info"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-warning">@brand-warning</label>
     <input class="form-control" id="input-@brand-warning" type="text" value="#f0ad4e" data-var="@brand-warning"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-danger">@brand-danger</label>
     <input class="form-control" id="input-@brand-danger" type="text" value="#d9534f" data-var="@brand-danger"/>
