--- a/less/variables.less
+++ b/less/variables.less
@@ -26,6 +26,7 @@
 @ku-red-hover:          #7b161a;
 @ku-jumpboard:          #921819;
 @ku-jumpboard-links:    #606060;
+@ku-jumpboard-list-bg:  #f1f1f1;
 @hum:                   #365aa5;
 @hum-hover:             #304f91;
 @science:               #46743c;
