--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2461,6 +2461,7 @@
 //Fix to make the box work in old Obvius rightbox
 // Obvius standard page fix
 
+.EncyclopediaEntry,
 .HTML,
 .Standard {
   .gridbox {
@@ -2823,7 +2824,7 @@
   }
 }
 // Outline style
-
+.EncyclopediaEntry,
 .HTML,
 .Standard,
 .double-column [class*=column],
